# tinfo.rs

./: Cargo.toml  Makefile  README.md
src/: main.rs  tinfo.rs
