[package]

name = "tinfo"
version = "0.6.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
license = "MIT"
repository = "https://github.com/richo/tinfo-rs"
description = "A frontend to manipulating tmux"

[dependencies]

regex = "1.0.5"
lazy_static = "1.1.0"
clap = "2.32.0"

[dev-dependencies]
toml = "0.4.8"
